<resources>
    <string name="app_name">NY Times</string>

    <string name="message">Type your message here...</string>
    <string name="preview">PREVIEW</string>
    <string name="email">EMAIL</string>
    <string name="strFullname">Dasha Shel</string>
    <string name="strDateOfBirth">Date of Birth: 08/12/1997</string>
    <string name="strPlacOfBirth">Place of Birth: Donetsk</string>

    <string name="strSecondaryEducation">Secondary education: Lyceum "Intellect"</string>
    <string name="strHigherEducation">Higher education: South Federal University</string>
    <string name="strAboutTheAuthor">About the author</string>

    <string name="strSearchLine">Enter text ...</string>
    <string name="strSearchButton">Search</string>

    <string name="strBack">Back to application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="strNews">News</string>
    <string name="strGif">List gifs</string>
    <string name="strGifDB">List gifs in DB</string>
</resources>
